# homelab

./: .gitignore  README.md  flake.nix
containers/: .env.example  compose.yaml
containers/orchestrator/: Dockerfile  dagster.yaml  pyproject.toml  workspace.yaml
containers/relational_database/init/: 001_create_schemas.sql
docs/reference/rustfs/: README.md
docs/spec/containers/: README.md
docs/spec/containers/dagster/: README.md
docs/spec/containers/object_storage/: README.md
docs/spec/containers/orchestrator/: README.md
docs/spec/containers/relational_database/: README.md
spec/containers/postgres/: README.md
spec/containers/rustfs/: README.md
